# SmartDisplay

./: docker-compose.yaml  docker_compose.yaml  startup.py
backend/: Dockerfile  pyproject.toml
backend/app/: lights.py  main.py  testRun.py  transistions.py
backend/app/alarm/: alarm.py
backend/app/button/: button.py
backend/app/display/: display.py  displaytest.py
backend/app/encoder/: encoder.py
backend/app/lights/: lights.py
backend/app/logs/: logs.py
