[tool.poetry]
name = "smartdisplay"
version = "0.1.0"
description = "magicmirror smartdisplay"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
